# kuroneko

./: .gitignore  COPYING  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yaml
kuroneko/: __init__.py  __main__.py  cache.py  database.py  scraper.py
test/: __init__.py  test_database.py  test_scraper.py
