[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "kuroneko"
authors = [{name = "Michał Górny", email = "mgorny@gentoo.org"}]
license = {file = "COPYING"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.9"
dependencies = [
    "colorama",
    "pkgcore",
    "requests",
]

[project.optional-dependencies]
scraper = [
    "bracex",
]
test = [
    "bracex",
    "pytest",
    "responses",
]
types = [
    "types-requests",
]

[project.scripts]
kuroneko = "kuroneko.__main__:main"

[project.urls]
Homepage = "https://github.com/projg2/kuroneko/"

[tool.flit.sdist]
include = [
    "test",
    "tox.ini",
]

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "test.*",
]
# requiring explicit types for all test methods would be cumbersome
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "bracex.*",
    "colorama.*",
    "pkgcore.*",
    "pytest.*",
    "responses.*",
    "rich.*",
]
ignore_missing_imports = true
